added helmet for meta tags on all pages with description and keywords

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,31 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Le  Paradigme une clinique infirmière basée sur une pratique intégrative de la santé à travers une vision d'équilibre biologique, psychologique et social de la personne, la pierre angulaire pour une santé durable."
+    />
+    <meta
+      itemprop="name"
+      content="Clinique Le Paradigme - Le paradigme des soins"
+    />
+    <meta
+      itemprop="description"
+      content="Notre mission est de prodiguer des soins infirmiers orientés vers la personne, en tenant compte de tous ses aspects bio-psycho-sociaux, de son environnement, de sa qualité de vie, tout en visant à promouvoir la santé publique."
+    />
+    <meta property="og:type" content="site web" />
+    <meta property="og:title" content="leparadigme.com" />
+    <meta
+      property="og:description"
+      content="Le  Paradigme une clinique infirmière basée sur une pratique intégrative de la santé à travers une vision d'équilibre biologique, psychologique et social de la personne, la pierre angulaire pour une santé durable."
+    />
+    <meta property="og:image" content="{src/assets/logo.png}" />
+    <meta property="og:url" content="https://www.leparadigme.com/" />
+    <meta property="og:site_name" content="leparadigme" />
+    <meta
+      name="keywords"
+      content="Le paradigme, Clinique, soins infirmiers, infirmière clinicienne, accompagnement, santé, "
+    />
     <title>Clinique Le Paradigme</title>
   </head>
   <body>
